<resources>
    <string name="app_name">UniPicDev</string>
    <string name="open_back">Open back </string>
    <string name="open_go">Open go</string>
    <string name="name">Имя</string>
    <string name="creationDate">Дата создания</string>
    <string name="modificationDate">Дата изменения</string>
    <string name="custom">Пользовательская</string>
    <string name="rename">Переименовать</string>
    <string name="editDate">Редактировать дату</string>
    <string name="sort">Sort</string>
    <string name="show_hidden">Показать скрытые</string>
    <string name="dont_show_hidden">Не показывать скрытые</string>
    <string name="options">Свойства</string>
    <string name="edit_date">Изменить дату</string>
    <string name="move_to">Переместить</string>
    <string name="copy_to">Копировать</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Удалить</string>
    <string name="hide">Скрыть</string>
    <string name="exclude">Исключить</string>
    <string name="change_cover">Изменить обложку</string>
    <string name="initial_date">Начальная дата</string>
    <string name="ascending">По возрастанию</string>
    <string name="descending">По убыванию</string>
    <string name="apply_to_all_folders">Применить ко всем папкам</string>
    <string name="sorting">Сортировка</string>
    <string name="setup_custom_sorting">Настроить порядок элементов</string>
</resources>